Fixed every instance the profiler found